# digital-album-project

./: .gitignore  AGENTS.md  HANDOFF.md  LICENSE  TEAM_SETUP.md  partitions.csv  project_documentation.md  restart_backend.bat  sdkconfig.defaults  后续优化方向.md
backend/: .env.example  README.md  config.py  filelist.txt  main.py  music_tags.json  photos.db  requirements.txt  server.py  upload.db
backend/backup/: filelist.txt  server_backup.py
backend/data/: world_cities_zh.csv
backend/services/: voice_server.py  voice_system_prompt.md
backend/tasks/: baidu_sync_task.py  cloud_analyze_photos.py  render_daily.py
backend/templates/: base.html  device.html  dialogs.html  library.html  review.html  upload.html
backend/tests/: test_emotion_acoustic.py  test_emotion_fusion.py  test_emotion_metrics.py  test_emotion_models.py  test_emotion_pipeline.py  test_emotion_policy.py  test_emotion_streaming.py  test_music_routing.py  test_voice_import_path.py  test_voice_photo_routing.py
backend/tools/: gen_retro_font.py  generate_default_image.py  generate_landscape_image.py  omni_realtime_client.py  regenerate_output_from_previews.py  replay_emotion.py  sync_lan_ip.py
backend/upload_photos/: 23890cd3b454_portrait.rgb565  23890cd3b454_portrait_cover.rgb565  87cacebf079c_portrait_cover.rgb565  b1875bacd944.rgb565  c0432ce4932e.rgb565  (+4 more)
docs/: BUGFIX_LOG_2026-06-17.md  BUGFIX_LOG_2026-06-21.md  backend_interface.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.md
main/app/: app_event.c  app_event.h
main/data/: placeholder.rgb565  placeholder_landscape.rgb565
main/lv_ui/include/: lvgl_port.h  lvgl_ui_task.h  ui_icons.h  ui_main.h  ui_png_images.h  waveshare_rgb_lcd_port.h
main/lv_ui/src/: lv_font_cjk_16.c  lv_voice_assistant.c  lv_voice_assistant.h  lvgl_port.c  lvgl_ui_task.c  test_font.c  ui_icons.c  ui_main.c  ui_png_images.c  waveshare_rgb_lcd_port.c
main/net_mgr/: net_mgr.c  net_mgr.h
main/peripherals/: i2s_mic_input.c  i2s_mic_input.h  i2s_output.c  i2s_output.h  pcf8574_io.c  pcf8574_io.h
main/peripherals/include/: aht20_sensor.h  he30.h  i2s_mic_input.h  i2s_output.h  mpu6050_sensor.h  pcf8574_io.h  peripherals_task.h  tca9548a.h
main/peripherals/src/: aht20_sensor.c  aroma_ctrl.c  audio_player.c  he30.c  i2s_mic_input.c  mpu6050_sensor.c  pcf8574_io.c  peripherals_task.c  tca9548a.c
main/photo_client/: photo_client.c  photo_client.h
main/services/: aroma_ctrl.c  aroma_ctrl.h  audio_player.c  audio_player.h  mic_service.c  mic_service.h
main/test_apps/tca9548a_aht20/: CMakeLists.txt
main/test_apps/tca9548a_aht20/main/: CMakeLists.txt  main.c
main/voice_assistant/include/: audio_buf.h  stream_player.h  voice_assistant.h  voice_assistant_task.h  voice_io.h  ws_voice.h
main/voice_assistant/src/: audio_buf.c  stream_player.c  voice_assistant.c  voice_assistant_task.c  voice_io.c  ws_voice.c
scripts/: configure_local_ip.ps1  doctor.ps1  generate_lvgl_font.py  idf.ps1  png_to_lvgl.py  restart_backend.ps1
(+22 files in other folders)
