idf_component_register(
    SRCS
        "main.c"
        "peripherals/aht20_sensor.c"
        "peripherals/peripherals.c"
        "peripherals/he30.c"
        "peripherals/pcf8574_io.c"
        "peripherals/i2s_output.c"
        "services/audio_player.c"
    INCLUDE_DIRS
        "."
        "peripherals"
        "services"
    REQUIRES
        driver
        esp_driver_i2s
        freertos
        espressif__aht20
        heap
        espressif__i2c_bus
        pcf8574
        i2cdev

)
